added titles to the notes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <div id="write">
             <h3>Add a note : </h3>
             <input type="text" name="" id="note" placeholder="Write something...">
+            <h3>Add a title to your note : </h3>
+            <input type="text" name="" id="noteTitle" placeholder="Give a title...">
             <input type="button" value="Add note" id="noteAddBtn">
         </div>
         <br>
